--- a/src/pages/Login/styles/login.sass
+++ b/src/pages/Login/styles/login.sass
@@ -15,7 +15,7 @@
                 flex-direction: column
                 margin-top: $m32mob
 
-                .email-input-container, .password-input-container
+                .email-input-container-l, .password-input-container
                     width: 100%
                     height: auto
                     display: flex
@@ -66,7 +66,7 @@
                 .password-input-container
                     margin-top: $m32mob
 
-                .lower-container
+                .lower-container-l
                     width: 100%
                     display: flex
                     justify-content: space-between
