--- a/src/styles/variables/variables.sass
+++ b/src/styles/variables/variables.sass
@@ -14,6 +14,7 @@ $primary_gray: #262626
 $gray_dark: #434343
 $secondary_text: #555555
 $gray_500: #7B7B7B
+$menu_bg: #F5F5F5
 $light_text: #9D9D9D
 $gray: #C4C4C4
 $white: white
