--- a/src/pages/MenuPage/styles/menu_page.sass
+++ b/src/pages/MenuPage/styles/menu_page.sass
@@ -21,9 +21,29 @@
             flex-direction: row
             align-items: center
             margin-top: $m32mob
+            margin-bottom: $m32mob
 
             .burger
                 float: left
 
             .menu-heading
                 margin: auto
+
+    .container
+
+        .tab-heading-container
+            width: 100%
+            height: auto
+            display: flex
+            justify-content: flex-start
+
+            .tab-heading
+                color: $selected
+                font-feature-settings: 'clig' off, 'liga' off
+                font-family: Lato
+                font-size: $font14mob
+                font-style: normal
+                font-weight: 700
+                line-height: 142.857%
+                margin-top: $m16mob
+                margin-bottom: $m16mob
