--- a/src/pages/MenuPage/styles/menu_page.css
+++ b/src/pages/MenuPage/styles/menu_page.css
@@ -44,4 +44,101 @@
   line-height: 142.857%;
   margin-top: clamp(8px, 3.73824vw, 32px);
   margin-bottom: clamp(8px, 3.73824vw, 32px);
+}
+.menu .container .main-menu-content {
+  width: 100%;
+  height: auto;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+.menu .container .main-menu-content .menu-row {
+  width: 89.2376681614%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+}
+.menu .container .main-menu-content .menu-row .menu-section {
+  display: flex;
+  flex-direction: column;
+}
+.menu .container .main-menu-content .menu-row .menu-section .menu-section-heading {
+  color: #262626;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 142.857%;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+.menu .container .main-menu-content .menu-row .menu-section .links {
+  display: flex;
+  flex-direction: column;
+}
+.menu .container .main-menu-content .menu-row .menu-section .links .link {
+  color: #555555;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.857%;
+  text-decoration: none;
+  margin-top: clamp(4px, 1.86912vw, 16px);
+  transition: 0.3s all;
+}
+.menu .container .main-menu-content .menu-row .menu-section .links .link:hover {
+  color: #FF7A00;
+}
+.menu .container .main-menu-content .menu-columns {
+  width: 89.2376681614%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+  margin-bottom: clamp(16px, 7.47648vw, 64px);
+}
+.menu .container .main-menu-content .menu-columns .column {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.menu .container .main-menu-content .menu-columns .column .menu-section {
+  display: flex;
+  flex-direction: column;
+}
+.menu .container .main-menu-content .menu-columns .column .menu-section .menu-section-heading {
+  color: #262626;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 142.857%;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+.menu .container .main-menu-content .menu-columns .column .menu-section .links {
+  display: flex;
+  flex-direction: column;
+}
+.menu .container .main-menu-content .menu-columns .column .menu-section .links .link {
+  color: #555555;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.857%;
+  text-decoration: none;
+  margin-top: clamp(4px, 1.86912vw, 16px);
+  transition: 0.3s all;
+}
+.menu .container .main-menu-content .menu-columns .column .menu-section .links .link:hover {
+  color: #FF7A00;
+}
+.menu .container .main-menu-content .menu-columns .column .under {
+  margin-top: clamp(16px, 7.47648vw, 64px);
 }/*# sourceMappingURL=menu_page.css.map */
