--- a/src/pages/MenuPage/styles/menu_page.sass
+++ b/src/pages/MenuPage/styles/menu_page.sass
@@ -47,3 +47,97 @@
                 line-height: 142.857%
                 margin-top: $m16mob
                 margin-bottom: $m16mob
+
+        .main-menu-content
+            width: 100%
+            height: auto
+            background-color: $white
+            display: flex
+            flex-direction: column
+            align-items: center
+            margin: auto
+
+            .menu-row
+                width: 89.23766816143498%
+                display: flex
+                align-items: flex-start
+                justify-content: space-between
+                margin-top: $m32mob
+
+                .menu-section
+                    display: flex
+                    flex-direction: column
+
+                    .menu-section-heading
+                        color: $primary_gray
+                        font-family: Lato
+                        font-size: $font14mob
+                        font-style: normal
+                        font-weight: 700
+                        line-height: 142.857%
+                        letter-spacing: 0.5px
+                        text-transform: uppercase
+
+                    .links
+                        display: flex
+                        flex-direction: column
+
+                        .link
+                            color: $secondary_text
+                            font-family: Lato
+                            font-size: $font14mob
+                            font-style: normal
+                            font-weight: 400
+                            line-height: 142.857%
+                            text-decoration: none
+                            margin-top: $m8mob
+                            transition: 0.3s all
+                            &:hover
+                                color: $selected
+
+            .menu-columns
+                width: 89.23766816143498%
+                display: flex
+                align-items: flex-start
+                justify-content: space-between
+                margin-top: $m32mob
+                margin-bottom: $m32mob
+
+                .column
+                    width: auto
+                    display: flex
+                    flex-direction: column
+                    align-items: flex-start
+
+                    .menu-section
+                        display: flex
+                        flex-direction: column
+
+                        .menu-section-heading
+                            color: $primary_gray
+                            font-family: Lato
+                            font-size: $font14mob
+                            font-style: normal
+                            font-weight: 700
+                            line-height: 142.857%
+                            letter-spacing: 0.5px
+                            text-transform: uppercase
+
+                        .links
+                            display: flex
+                            flex-direction: column
+                            .link
+                                color: $secondary_text
+                                font-family: Lato
+                                font-size: $font14mob
+                                font-style: normal
+                                font-weight: 400
+                                line-height: 142.857%
+                                text-decoration: none
+                                margin-top: $m8mob
+                                transition: 0.3s all
+                                &:hover
+                                    color: $selected
+
+                    .under
+                        margin-top: $m32mob
