--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -11,6 +11,7 @@
         -webkit-font-smoothing: antialiased
         -moz-osx-font-smoothing: grayscale
         text-rendering: optimizeLegibility
+        overflow-x: hidden !important
 
         header
             width: 100%
