--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -10,6 +10,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden !important;
 }
 * body header {
   width: 100%;
