--- a/src/pages/ProductDetails/styles/product_details.sass
+++ b/src/pages/ProductDetails/styles/product_details.sass
@@ -58,7 +58,7 @@
         margin-top: $m32mob
 
         .product-heading
-            width: 200%
+            width: auto
             color: $primary_gray
             font-feature-settings: 'clig' off, 'liga' off
             font-family: Lato
@@ -129,6 +129,92 @@
                 background-color: $selected
                 border: none
                 border-radius: 4px
+
+    .guideline
+        width: 100%
+        height: auto
+        color: $selected
+        font-family: Lato
+        font-size: $font16mob
+        font-style: normal
+        font-weight: 700
+        line-height: 206.908%
+        text-align: left
+        margin-top: $m16mob
+        margin-bottom: $m16mob
+
+    .product-details
+        width: 100%
+        height: auto
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+
+        .colors-container
+            width: 100%
+            height: auto
+            display: flex
+            align-items: center
+
+            .color
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font16mob
+                font-style: normal
+                font-weight: 600
+                line-height: 206.908%
+
+            .colors
+                width: auto
+                height: auto
+                display: flex
+                align-items: center
+                margin-left: $m32mob
+
+                .color-btn
+                    width: $m16mob
+                    height: $m16mob
+                    border-radius: 50px
+                    border: none
+
+                .red
+                    background-color: #750430
+                    margin-right: clamp(6px,2.80368vw,24px)
+
+                .green
+                    background-color: #00A95D
+                    margin-right: clamp(6px,2.80368vw,24px)
+
+                .blue
+                    background-color: #A2D2FC
+                    margin-right: clamp(6px,2.80368vw,24px)
+
+                .orange
+                    background-color: #FF7A00
+
+        .shipping-container
+            width: 100%
+            height: auto
+            display: flex
+            align-items: center
+            margin-top: $m16mob
+
+            .shipping-text
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font16mob
+                font-style: normal
+                font-weight: 600
+                line-height: 206.908%
+
+            .shipping-selector
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font16mob
+                font-style: normal
+                font-weight: 500
+                line-height: 125%
+                margin-left: $m16mob
 
 .loading-screen
     width: 100%
