--- a/src/pages/ProductDetails/styles/product_details.sass
+++ b/src/pages/ProductDetails/styles/product_details.sass
@@ -216,6 +216,10 @@
                 line-height: 125%
                 margin-left: $m16mob
 
+            .chevron
+                font-size: $font14mob
+                margin-left: $m8mob
+
 .loading-screen
     width: 100%
     height: 100vh
