--- a/src/pages/ProductDetails/styles/product_details.sass
+++ b/src/pages/ProductDetails/styles/product_details.sass
@@ -220,6 +220,244 @@
                 font-size: $font14mob
                 margin-left: $m8mob
 
+        .quantity-container
+            width: 100%
+            display: flex
+            flex-direction: row
+            align-items: center
+
+            .quantity-text
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font16mob
+                font-style: normal
+                font-weight: 600
+                line-height: 206.908%
+
+            .quantity-counter
+                width: clamp(50.5px,23.59764vw,202px)
+                height: clamp(20px,9.3456vw,80px)
+                display: flex
+                align-items: center
+                justify-content: center
+                border-radius: 4px
+                border: 1px solid $gray
+                margin-left: $m32mob
+
+                .quantity-icon
+                    font-size: $font14mob
+                    color: $light_text
+
+                .minus
+                    margin-right: $m16mob
+
+                .plus
+                    margin-left: $m16mob
+
+            .available
+                color: $secondary_text
+                font-family: Lato
+                font-size: $font14mob
+                font-style: normal
+                font-weight: 400
+                line-height: 142.857%
+                margin-left: $m16mob
+
+.product-details-container
+    width: 90%
+    height: auto
+    display: flex
+    flex-direction: column
+    margin: auto
+    margin-top: $m32mob
+
+    .tabs-container
+        width: 100%
+        height: auto
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: space-between
+
+        .product-tab
+            color: $primary_gray
+            font-family: Lato
+            font-size: $font12mob
+            font-style: normal
+            font-weight: 700
+            line-height: 142.857%
+            letter-spacing: 0.5px
+            text-transform: uppercase
+            background-color: transparent
+            border: none
+        .inactive
+            color: $light_text
+
+    .separator
+        width: 100%
+        height: 1px
+        background-color: $light_text
+        margin-top: $m8mob
+
+    .details-content
+        width: 100%
+        height: auto
+        display: flex
+        align-items: flex-start
+        justify-content: space-between
+        margin-top: $m16mob
+
+        .details-column
+            width: auto
+            height: auto
+            display: flex
+            flex-direction: column
+            justify-content: flex-start
+            align-items: center
+
+            .column-section
+                display: flex
+                flex-direction: column
+
+                .section-text
+                    color: $primary_gray
+                    font-family: Lato
+                    font-size: $font16mob
+                    font-style: normal
+                    font-weight: 700
+                    line-height: 156.25%
+
+                .paragraph
+                    width: 150px
+                    color: $secondary_text
+                    font-family: Lato
+                    font-size: $font14mob
+                    font-style: normal
+                    font-weight: 400
+                    line-height: 142.857%
+                    margin-top: $m8mob
+
+                .description-list
+                    list-style-type: disc
+                    margin-left: $m16mob
+
+                    .list-elem
+                        color: $secondary_text
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font14mob
+                        font-style: normal
+                        font-weight: 400
+                        line-height: 142.857%
+
+                .care-instruction-list
+                    width: auto
+                    height: auto
+                    display: flex
+                    flex-direction: column
+                    align-items: flex-start
+
+            .two
+                display: flex
+                flex-direction: column
+                margin-top: $m16mob
+
+            .two-s
+                margin-top: $m16mob
+                margin-left: clamp(12px,5.60736vw,48px)
+
+    .lower-separator-container
+        width: 100%
+        height: auto
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin-top: $m32mob
+
+        .separator-l
+            width: 100%
+            height: 1px
+            background-color: $gray
+
+        .show-less
+            width: 100%
+            display: flex
+            align-items: center
+            color: $primary_gray
+            text-align: right
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font14mob
+            font-style: normal
+            font-weight: 500
+            line-height: 142.857%
+            text-transform: uppercase
+            margin-left: $m16mob
+            margin-right: $m16mob
+
+            .arrow-icon
+                margin-right: $m8mob
+
+    .price-tab
+        width: 100%
+        height: auto
+        display: flex
+        align-items: center
+        justify-content: center
+        background-color: #E9E9E9
+        border-radius: 9px
+        margin-top: $m32mob
+
+        .price-tab-content
+            width: 90%
+            height: auto
+            display: flex
+            flex-direction: column
+            align-items: flex-start
+            margin-top: $m16mob
+            margin-bottom: $m16mob
+
+            .price-tab-heading
+                width: 100%
+                height: auto
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font18mob
+                font-style: normal
+                font-weight: 700
+                line-height: 166.667%
+                text-align: left
+
+            .separator
+                width: 100%
+                height: 1px
+                background-color: $light_text
+                margin-top: $m8mob
+                margin-bottom: $m8mob
+
+            .price-tab-lower
+                width: 100%
+                height: auto
+                display: flex
+                align-items: flex-start
+                justify-content: space-between
+
+                .plus-icon-c
+                    color: $light_text
+                    font-size: $font18mob
+
+                .text
+                    color: $secondary_text
+                    font-family: Lato
+                    font-size: $font12mob
+                    font-style: normal
+                    font-weight: 400
+                    line-height: 166.667%
+                    margin-left: $m8mob
+
+                    .small
+                        font: $font10mob
+
 .loading-screen
     width: 100%
     height: 100vh
