--- a/src/pages/ProductDetails/styles/product_details.sass
+++ b/src/pages/ProductDetails/styles/product_details.sass
@@ -458,6 +458,53 @@
                     .small
                         font: $font10mob
 
+    .buttons
+        width: 100%
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin: auto
+        margin-top: $m32mob
+
+        .button
+            width: clamp(90px,42.0552vw,360px)
+            height: clamp(28px,13.083839999999999vw,112px)
+            justify-content: center
+            align-items: center
+            color: $white
+            text-align: center
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font14mob
+            font-style: normal
+            font-weight: 500
+            line-height: 142.857%
+            text-transform: uppercase
+            background-color: $button_blue
+            border-radius: 6px
+            border: none
+
+        .basket
+            width: clamp(90px,42.0552vw,360px)
+            height: clamp(28px,13.083839999999999vw,112px)
+            display: flex
+            align-items: center
+            justify-content: center
+            color: $secondary_text
+            text-align: right
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font14mob
+            font-style: normal
+            font-weight: 500
+            line-height: 142.857%
+            text-transform: uppercase
+            border: 1px solid $secondary_text
+            background-color: transparent
+
+            .basket-icon
+                margin-right: $m8mob
+
 .loading-screen
     width: 100%
     height: 100vh
